<resources>
    <string name="app_name">Sikemas IF</string>
    <string name="greetings_pagi">Selamat Pagi,</string>
    <string name="greetings_siang">Selamat Siang,</string>
    <string name="greetings_sore">Selamat Sore,</string>
    <string name="welcome_message">Jadwal mata kuliah yang Anda ampu saat ini:</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="email_prompt_label">Email</string>
    <string name="password_prompt_label">Password</string>
    <string name="sign_in_button">Masuk</string>
    <string name="login_title">Akun Masuk</string>
    <string name="welcome_message_2">Sistem Kehadiran Mahasiswa\nTeknik Informatika ITS</string>
    <string name="welcome_message_1">Selamat Datang</string>

    <string name="status_hadir">Hadir</string>
    <string name="status_absen">Absen</string>
    <string name="status_ijin">Ijin</string>

    <string name="pref_enable_notifications_key" translatable="false">aktifkan_notifikasi</string>
    <string name="pref_enable_notifications_label">Notifikasi Jadwal Perkuliahan</string>
    <string name="pref_enable_notifications_true">Aktif</string>
    <string name="pref_enable_notifications_false">Non Aktif</string>
    <string name="pref_last_notification">Notifikasi terakhir</string>
    <string name="today">Hari ini</string>
    <string name="tomorrow">Besok</string>
    <string name="tv_colon">:</string>
    <string name="hari_label">Hari</string>
    <string name="kelas_label">Kelas</string>
    <string name="tv_empty_value">-</string>
    <string name="judul_jadwal_kosong">Jadwal Perkuliahan tidak ditemukan</string>
    <string name="subjudul_jadwal_kosong">Jadwal perkuliahan hari ini tidak ditemukan, kemungkinan Anda tidak memiliki jam mengampu mata kuliah hari ini (libur).</string>
    <string name="subjudul_jadwal_kosong_mahasiswa">Jadwal perkuliahan hari ini tidak ditemukan, kemungkinan Anda tidak memiliki jadwal perkuliahan hari ini atau libur.</string>
    <string name="btn_lihat_peserta">Lihat PESERTA</string>
    <string name="btn_lihat_kehadiran">Lihat Kehadiran</string>
    <string name="status_belum_aktif">Belum Aktif</string>
    <string name="status_selesai">Selesai</string>
    <string name="status_aktif">Aktif</string>
    <string name="penjadwalan_ulang_label">Penjadwalan Ulang</string>
    <string name="sementara_button_label">Sementara</string>
    <string name="permanen_button_label">Permanen</string>
    <string name="to_label">selesai</string>
    <string name="from_label">mulai</string>
    <string name="clock_icon">clock icon</string>
    <string name="schedule_icon">schedule icon</string>
    <string name="place_icon">place icon</string>
    <string name="jadwal_permanen_message_label">Jadwal permanen saat ini</string>
    <string name="simpan_perubahan_button">Simpan Perubahan</string>
    <string name="pilih">Pilih</string>
    <string name="batal">Batal</string>
    <string name="aktifkan">Aktifkan</string>
    <string name="aktifkan_button">Aktifkan</string>
    <string name="batalkan_kelas_button">Batalkan Kelas</string>
    <string name="akhiri_kelas_button">Akhiri Kelas</string>
    <string name="akhiri">Akhiri</string>
    <string name="batalkan">batalkan</string>
    <string name="kelas_sudah_diakhiri_label">Kelas Sudah Diakhiri</string>
    <string name="perkuliahan_aktif_saat_ini_label">Perkuliahan Aktif Saat Ini</string>
    <string name="verifikasi_tanda_tangan_button_label">Tanda Tangan</string>
    <string name="verifikasi_wajah_button_label">Cocokan Wajah</string>
    <string name="posisi_saat_ini_label">Posisi saat ini</string>
    <string-array name="status_kehadiran_item">
        <item>Hadir</item>
        <item>Ijin</item>
        <item>Absen</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="validasi_wajah_btn_label">Validasi Wajah</string>
    <string name="validasi_tanda_tangan_btn_label">Validasi TTD</string>
    <string name="recognition_view_btn_label">Recognition View</string>
    <string name="recognition_training_btn_label">Recognition Training</string>
    <string name="detection_view_btn_label">Detection View</string>
    <string name="settings_btn_label">Settings</string>
    <string name="verification_view_btn_label">Verifikasi Wajah</string>
    <string name="menu_verifikasi_wajah_title">Mahasiswa Terlogin</string>
    <string name="mahasiswa_terlogin_empty">NRP - Nama</string>
    <string name="now_date_label">now date</string>
    <string name="green_line_divider_description">green line divider</string>
    <string name="verifikasi_kehadiran_label">VERIFIKASI KEHADIRAN</string>
    <string name="kelola_data_set_wajah_btn_label">Kelola Data Wajah</string>
    <string name="training_data_set_btn_label">Latih Data Wajah</string>
    <string name="tambah_data_set_wajah">Daftarkan Data Wajah</string>
    <string name="sinkronisasi_data_set_wajah">Sinkronisasi</string>
    <string name="wajah_terambil_label">Wajah Terambil</string>
    <string name="menambah_data_set_wajah_dari_message">Menambah data wajah dari:</string>
    <string name="training_data_set_wajah_btn_label">Latih Data Wajah</string>
    <string name="memproses_data_set_title">Memproses Data Wajah…</string>
    <string name="tv_email_empty_view"><![CDATA[<email>]]></string>
    <string name="tv_id_pengguna_empty_view"><![CDATA[<id_pengguna>]]></string>
    <string name="tv_nama_pengguna_empty_view"><![CDATA[<nama_pengguna>]]></string>
    <string name="pertemuan_ke_label">Pertemuan ke-</string>
    <string name="pertemuan_ke_hint"><![CDATA[<pertemuan-ke>]]></string>
    <string name="pertemuan_ke_description">pertemuan ke description</string>
    <string name="kode_matakuliah_hint"><![CDATA[<kode_matakuliah>]]></string>
    <string name="nama_matakuliah_hint"><![CDATA[<nama_matakuliah>]]></string>
    <string name="kelas_hint"><![CDATA[<kelas>]]></string>
    <string name="mahasiswa_terlogin_label">Mahasiswa Terlogin</string>
    <string name="nrp_nama_hint"><![CDATA[<NRP - Nama>]]></string>
    <string name="jumlah_data_set_tersimpan_label">Jumlah Data Wajah Tersimpan</string>
    <string name="data_set_wajah_tidak_ditemukan_hint">Data Wajah Tidak Ditemukan</string>
    <string name="btn_upload_file_label">Unggah Data Wajah</string>
    <string name="judul_jawal_aktif_kosong">Jadwal Perkuliahan Aktif Tidak Ditemukan</string>
    <string name="subjudul_jadwal_aktif_kosong">Jadwal aktif kosong, kemungkinan jadwal perkuliahan belum diaktifkan atau tidak ada perkuliahan</string>
    <string name="email_nrp_prompt_label">Email / NRP</string>
    <string name="perkuliahan_belum_aktif">Perkuliahan Belum Aktif</string>
    <string name="perkuliahan_aktif">Perkuliahan Sedang Aktif</string>
    <string name="perkuliahan_berakhir">Perkuliahan Telah Berakhir</string>
    <string name="perkuliahan_ditunda">Perkuliahan Ditunda</string>
    <string name="tv_status_ijin_label">I\nJ\nI\nN</string>
    <string name="tv_status_absen_label">A\nB\nS\nE\nN</string>
    <string name="tv_status_hadir_label">H\nA\nD\nI\nR</string>
    <string name="tv_status_kehadiran_ijin_label">Ijin</string>
    <string name="tv_status_kehadiran_absen_label">Absen</string>
    <string name="tv_status_kehadiran_hadir_label">Hadir</string>
    <string name="tv_status_presensi_kosong_label">Belum\nPresensi</string>
    <string name="pilih_tanggal_btn_label">Pilih Tanggal</string>
    <string name="btn_pilih_ruangan_label">pilih ruangan</string>
    <string name="tanggal_terpilih_label">Tanggal Terpilih</string>
    <string name="btn_next">Next</string>
    <string name="btn_pilih_waktu_label">pilih waktu</string>
    <string name="waktu_terpilih_label">Waktu Terpilih</string>
    <string name="perubahan_jadwal_label">Perubahan Jadwal</string>
    <string name="caption_ruangan_baru_label">Ruangan Baru</string>
    <string name="lokasi_caption_label">Lokasi</string>
    <string name="kelas_caption_label">Kelas</string>
    <string name="ruangan_caption_label">Ruangan</string>
    <string name="waktu_perkuliahan_caption_label">Waktu Perkuliahan</string>
    <string name="konfirmasi_perubahan_btn_label">Simpan Perubahan</string>
    <string name="batalkan_perubahan_btn_label">Batalkan Perubahan</string>
    <string name="pilih_ruangan_label">Pilih Ruangan</string>
    <string name="kelola_data_set_tanda_tangan">Kelola Data set tanda tangan</string>
    <string name="tambah_data_set_tanda_tangan">TAMBAH DATA SET TANDA TANGAN</string>
    <string name="tanda_tangan_disini">TANDA TANGAN DISINI</string>
    <string name="batal_tandatangan">TUTUP</string>
    <string name="hapus_tandatangan">HAPUS</string>
    <string name="simpan_tandatangan">KIRIM</string>
    <string name="unduh_dataset_tanda_tangan">UNDUH DATASET</string>
    <string name="header_tambah_dataset_ttd">TANDA TANGAN SEBANYAK 5 KALI</string>
    <string name="upload_file">UNGGAH DATASET</string>
    <string name="jumlah_data_set_tersimpan">Jumlah Dataset Tersimpan</string>
    <string name="locationService">Location Service</string>
    <string name="alasan_ijin_kehadiran_label">Alasan ijin kehadiran</string>
    <string name="status_kehadiran_label">Pilih Status kehadiran</string>
    <string name="ubah_kehadiran_message">Apakah Anda yakin ingin mengubah status kehadiran dari:</string>

    <string name="label_status">Status</string>

    <!-- Strings related to QR SCanner-->
    <string name="scan_barcode_button">Scan QR</string>
    <string name="no_barcode_captured">Tidak Terdeteksi</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="berita_acara_title">Berita Acara</string>
    <string name="tambah_berita_caption">Tambah berita</string>
    <string name="deskripsi_hint">Deskripsi</string>
    <string name="tambahkan_btn">Tambahkan</string>
    <string name="pertemuan_ke_caption">Pertemuan ke-</string>
    <string name="tambah_berita_acara_string">Tambah Berita Acara</string>
    <string name="verifikasi_tanda_tangan_label">Verifikasi Tandatangan</string>
    <string name="search_item">cari</string>
    <string name="refresh_item">refresh</string>
</resources>
