<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah_kehadiran_message"
        android:textColor="#80000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_identitas_mahasiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nrp_nama_hint"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/status_kehadiran_label"
        android:textColor="#80000000"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rg_status_kehadiran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_status_hadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_status_kehadiran_hadir_label"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_status_absen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_status_kehadiran_absen_label"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_status_ijin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_status_kehadiran_ijin_label"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_alasan_ijin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/alasan_ijin_kehadiran_label"
        android:textColor="#80000000"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edt_alasan_ijin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>