<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/linearLayout1_tambah_tandatangan"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/tv_tambah_data_set_tandatangan" />

    <LinearLayout
        android:id="@+id/linearLayout2_tambah_tandatangan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:background="@android:color/white">

        <Button
            android:id="@+id/btn_tambah_tandatangan_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/batal_tandatangan"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_tambah_tandatangan_clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/hapus_tandatangan"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_tambah_tandatangan_simpan"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/simpan_tandatangan"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_tambah_tandatangan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical" />
</LinearLayout>